--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         </div>
         <!--End Panel-->
     </div>
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/lib/jquery-1.11.3.min.js"></script>
     <!-- custom scrollbar plugin -->
     <script src="js/lib/jquery.mCustomScrollbar.concat.min.js"></script>
     <!-- Select Box -->
