Commit code for Dropdown changes

--- a/index.html
+++ b/index.html
@@ -55,18 +55,22 @@
                                 <div class="form-row clearfix">
                                     <label class="label">Type</label>
                                     <div class=" no-padding margin-5  pull-left">
-                                        <select class="select-dropdown">
-                                            <option value="">Click Me</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                            <option>#4566871</option>
-                                        </select>
+										<div class="dropdownlist">
+											<div class="selected-listitem">Click Me</div>
+											<ul class="select-dropdown">
+												<li class="default-listitem" rel="">Click Me</li>
+												<li rel="4566871">#4566871</option>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+												<li rel="4566871">#4566871</li>
+											</ul>
+											<input type="hidden" name="search_type" class="dropdown-item" value="" />
+										</div>
                                     </div>
                                     <div class=" no-padding  margin-5 pull-left">
                                         <input type="text" class="text-box" name="service_code" value="">
