Commit Form Elements and css

--- a/elements.html
+++ b/elements.html
@@ -149,10 +149,11 @@
 				<form>
 				<div class="col-md-5">
 					<div class="row">
+					<div class="drop-menu-list">
 						<label class="label-text">Vessel Service Code : </label> 
 						<div class="dropdownlist">
-							<div class="selected-listitem dropdown-box">Select Category</div>
-							<ul>
+							<div class="selected-listitem dropdown-box">Click Me</div>
+							<ul class="dropdown-list">
 								<li value="">Select Category</li>
 								<li value="1" rel="5">Select Category1</li>
 								<li value="2" rel="6">Select Category2</li>
@@ -162,7 +163,8 @@
 							</ul>
 							<input type="hidden" name="search_category" class="dropdown-item" value="12" />
 						</div>
-						<input class="text-input small-width" type="text"/>
+						
+						<input class="text-input small-width" type="text"/></div>
 						<label class="label-text">Berthing Type :</label> 
 						<select class="text-input full-width">
                             <option selected="" disabled="" value="">Click Me</option>
