Element css change

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <!-- Bootstrap core CSS -->
     <link href="css/lib/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
+	<link href="css/reset.css" rel="stylesheet" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" rel="stylesheet">
     <link href="css/lib/jquery.mCustomScrollbar.css" rel="stylesheet">
-    <link href="css/reset.css" rel="stylesheet" rel="stylesheet">
     <link href="css/lib/font-awesome.min.css" rel="stylesheet">
+	<link type="text/css" href="css/uie-button.css" rel="stylesheet">
+	 <!--Responsive CSS -->
     <link href="css/responsive.css" rel="stylesheet">
 </head>
 
@@ -39,15 +41,17 @@
             <div class="panel-block-content no-padding">
                 <div class="app-action-form clearfix">
                     <span class="heading ">Filter </span>
-                    <div class="filter-select clearfix ">
-                        <select class="select-dropdown">
-                            <option>111</option>
-                            <option>222</option>
-                            <option>333</option>
-                            <option>444</option>
-                        </select>
-                    </div>
-                    <div class="form-action-field ">
+					<div class="dropdownlist clearfix">
+						<div class="selected-listitem dropdown-box">Click Me</div>
+							<ul class="dropdown-list">
+								<li value=""> 111</li>
+								<li value="" rel="">222</li>
+								<li value="" rel=""> 333</li>
+								<li value="" rel="">444</li>
+							</ul>
+					</div>
+					<div class=" clearfix"></div>
+                    <div class="form-action-field">
                         <form>
 
                             <!-- Row -->
