Dropdown css changes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="panel-block-content no-padding">
                 <div class="app-action-form clearfix">
                     <span class="heading ">Filter </span>
-					<div class="dropdownlist clearfix">
-						<div class="selected-listitem dropdown-box">Click Me</div>
+					<div class="dropdownlist col-md-3">
+						<div class="selected-listitem">Click Me</div>
 							<ul class="dropdown-list">
 								<li value=""> 111</li>
 								<li value="" rel="">222</li>
@@ -182,6 +182,7 @@
                     </div>
                 </div>
                 <!-- Panel Content Table-grid -->
+				
                 <div id="table-grid" class="table-record scroll">
                     <table class="table-grid">
                         <thead>
@@ -194,16 +195,7 @@
                                 </th>
                                 <th>
                                     <span>Cal </span><a href="#" class="col-action"><i class="fa fa-chevron-down"></i></a>
-                                    <div class="dp-menu">
-                                        <ul>
-                                            <li><a href="login.html">Make Editable</a>
-                                            </li>
-                                            <li><a href="# ">Add column to left</a>
-                                            </li>
-                                            <li><a href="# ">Add column to right</a>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                    
                                 </th>
                                 <th><span>Vessel Name</span> <a href="#" class="col-action"><i class="fa fa-chevron-down"></i></a>
                                 </th>
