Dropdown html remove unnessary class

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <div class="panel-block-content no-padding">
                 <div class="app-action-form clearfix">
                     <span class="heading ">Filter </span>
-					<div class="dropdownlist col-md-3">
+					<div class="dropdown-list col-md-3">
 						<div class="selected-listitem">Click Me</div>
-							<ul class="dropdown-list">
+							<ul>
 								<li value=""> 111</li>
 								<li value="" rel="">222</li>
 								<li value="" rel=""> 333</li>
