--- a/elements.html
+++ b/elements.html
@@ -152,9 +152,9 @@
 					<div class="form-row clearfix">
 						<div class="drop-menu-list">
 							<label class="label-text">Vessel Service Code : </label> 
-							<div class="dropdownlist">
-								<div class="selected-listitem dropdown-box">Click Me</div>
-								<ul class="dropdown-list">
+							<div class="dropdown-list">
+								<div class="selected-listitem">Click Me</div>
+								<ul>
 									<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 									<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i> Select Category1</li>
 									<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
@@ -171,9 +171,9 @@
 					<div class="form-row clearfix">
 						<label class="label-text">Berthing Type :</label> 
 						<div class="drop-menu-list">
-							<div class="dropdownlist full-width">
-								<div class="selected-listitem dropdown-box">Click Me</div>
-								<ul class="dropdown-list">
+							<div class="dropdown-list full-width">
+								<div class="selected-listitem">Click Me</div>
+								<ul>
 									<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 									<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i> Select Category1</li>
 									<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
@@ -209,9 +209,9 @@
 					<div class="form-row clearfix">
 						<div class="drop-menu-list">
 						<label class="label-text">Vessel Service Code : </label> 
-							<div class="dropdownlist">
-								<div class="selected-listitem dropdown-box">Click Me</div>
-								<ul class="dropdown-list">
+							<div class="dropdown-list">
+								<div class="selected-listitem">Click Me</div>
+								<ul>
 									<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 									<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i> Select Category1</li>
 									<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
@@ -232,9 +232,9 @@
 					<div class="form-row clearfix">
 						<label class="label-text">Service Type :</label> 
 						<div class="drop-menu-list">
-							<div class="dropdownlist full-width">
-								<div class="selected-listitem dropdown-box">Click Me</div>
-								<ul class="dropdown-list">
+							<div class="dropdown-list full-width">
+								<div class="selected-listitem">Click Me</div>
+								<ul>
 									<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 									<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i> Select Category1</li>
 									<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
@@ -250,9 +250,9 @@
 					<div class="form-row clearfix">
 						<label class="label-text">Berth :</label> 
 						<div class="drop-menu-list">
-							<div class="dropdownlist full-width">
-								<div class="selected-listitem dropdown-box">Click Me</div>
-								<ul class="dropdown-list">
+							<div class="dropdown-list full-width">
+								<div class="selected-listitem">Click Me</div>
+								<ul>
 									<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 									<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i> Select Category1</li>
 									<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
@@ -267,9 +267,9 @@
 					<div class="form-row clearfix">
 						<div class="drop-menu-list">
 							<label class="label-text"><b>Proforma ETA :</b> </label> 
-							<div class="dropdownlist">
-								<div class="selected-listitem dropdown-box">Click Me</div>
-								<ul class="dropdown-list">
+							<div class="dropdown-list">
+								<div class="selected-listitem">Click Me</div>
+								<ul>
 									<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 									<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i>  Select Category1</li>
 									<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
@@ -297,9 +297,9 @@
 					<div class="form-row clearfix">
 						<div class="drop-menu-list">
 						<label class="label-text">Vessel Service Code : </label> 
-						<div class="dropdownlist">
-							<div class="selected-listitem dropdown-box">Click Me</div>
-							<ul class="dropdown-list">
+						<div class="dropdown-list">
+							<div class="selected-listitem">Click Me</div>
+							<ul>
 								<li value=""> <i class="fa fa-pencil-square-o"></i> Select Category</li>
 								<li value="1" rel="5"> <i class="fa fa-pencil-square-o"></i> Select Category1</li>
 								<li value="2" rel="6"> <i class="fa fa-pencil-square-o"></i> Select Category2</li>
