--- a/elements.html
+++ b/elements.html
@@ -63,9 +63,9 @@
             </div>
             <div class="padding-top"></div>
             <div class="col-md-4">
-                <button class="uie-primary-extra-large-button"> <i class="fa fa-filter"></i>
-                    <div class="extra-large-button-text">Filter </div>
-                </button>
+                <button class="uie-primary-button margin-5 uie-button uie-icon-btn"> <span class="btn-icon"><img alt="Filter" src="img/icons/svg/filter.svg"></span>
+					<div class="btn-value">Filter </div>
+				</button>
             </div>
         </div>
         <div class="padding-top"></div>
@@ -341,8 +341,8 @@
 				</div>
 					<div class="col-md-12 clearfix ">
 						<div class="center-elements"> 
-							<button class="uie-primary-extra-large-button"> <i class="fa fa-filter"></i>
-								<div class="extra-large-button-text">Filter </div>
+							<button class="uie-primary-button margin-5 uie-button uie-icon-btn"> <span class="btn-icon"><img alt="Filter" src="img/icons/svg/filter.svg"></span>
+								<div class="btn-value">Filter </div>
 							</button>
 							<button class="uie-reset" type="reset">Reset </button>
 						</div>
@@ -351,16 +351,16 @@
 				</form>
 			</div>
 	
-	<div class="svg">
-		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			 width="64px" height="64px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
-		<g id="Shape_42_copy_6">
-			<g>
-				<polygon class="st3" points="1.1,5.9 24.3,29.1 24.3,60 39.7,52.3 39.7,29.1 62.9,5.9 		"/>
+		<div class="svg">
+			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+				 width="64px" height="64px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+			<g id="Shape_42_copy_6">
+				<g>
+					<polygon class="st3" points="1.1,5.9 24.3,29.1 24.3,60 39.7,52.3 39.7,29.1 62.9,5.9 		"/>
+				</g>
 			</g>
-		</g>
-		</svg>
-	</div>
+			</svg>
+		</div>
 
 	</section>
 	</div>
