--- a/elements.html
+++ b/elements.html
@@ -369,6 +369,8 @@
 
     <!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
+	<!-- custom scrollbar plugin -->
+    <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/init/elements.js"></script>
 	
 </body>
