work on style.css for tabel grid page

--- a/table-grid.html
+++ b/table-grid.html
@@ -133,7 +133,7 @@
                                 <!-- Form Footer -->
                                
 								 <div class="form-btn-group  clearfix"> 
-								<button class="uie-primary-button margin-5 uie-button uie-icon-btn"> <span class="btn-icon"><img src="img/icons/svg/filter.svg" alt="Filter" ></span>
+								<button class="uie-primary-button margin-5 uie-button uie-icon-btn"> <span class="btn-icon"><img src="img/icons/svg/filter-white.svg" alt="Filter" ></span>
         <div class="btn-value">Filter </div>
        </button>
        <button class="uie-secondary-button uie-button" type="reset">Reset </button>
@@ -201,10 +201,10 @@
                         <thead>
                             <tr>
                                 <th>
-                                    <div class="checkbox">
+                                    <span class="checkbox">
                                         <input class="css-checkbox" type="checkbox">
                                         <label class="css-label" for="checkbox2"></label>
-                                    </div>
+                                    </span>
                                 </th>
                                 <th>
                                     <span>Cal </span>
@@ -723,6 +723,7 @@
 	
 	<!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+	<script src="js/init/elements.js"></script>
 	
 </body>
 </html>
