Commit code for Page loader

--- a/login.html
+++ b/login.html
@@ -19,12 +19,13 @@
     
 </head>
 
-<body>
-    <div  data-replace="text">
-        {{meta_login_desc}}
+<body data-reference="page-loader">
+    <div>
+		
     </div>
 	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
 
     <!-- Custom JavaScript -->
