Commit changes for Scrollbar code

--- a/table-grid.html
+++ b/table-grid.html
@@ -196,7 +196,7 @@
                 </div>
                 <!-- Panel Content Table-grid -->
 
-                <div id="table-grid" class="table-record scroll">
+                <div id="table-grid" class="table-record scroll" data-scroll="true">
                     <table class="table-grid">
                         <thead>
                             <tr>
