Commit changes for initialize js

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,16 +19,18 @@
     
 </head>
 
-<body>
+<body  data-reference="page-loader">
     <div  data-replace="text">
         {{meta_login_desc}}
     </div>
 	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
+	<script src="js/initialize.js"></script>
     <script src="js/init/dashboard.js"></script>
 	
 </body>
