--- a/login.html
+++ b/login.html
@@ -30,6 +30,7 @@
 
     <!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
+    <script src="js/initialize.js"></script>
     <script src="js/init/login.js"></script>
 	
 </body>
