--- a/table-grid.html
+++ b/table-grid.html
@@ -19,7 +19,7 @@
     
 </head>
 
-<body>
+<body data-reference="page-loader">
    
          <div class="container">
         <!-- Panel Block-->
@@ -715,14 +715,16 @@
     
 	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
-
-    <!-- Custom JavaScript -->
-    <script src="js/functions.js"></script>
-    <script src="js/init/table-grid.js"></script>
-	
+		
 	<!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+	
+    <!-- Custom JavaScript -->
+    <script src="js/functions.js"></script>
+	<script src="js/initialize.js"></script>
+    <script src="js/init/table-grid.js"></script>
 	<script src="js/init/elements.js"></script>
 	
 </body>
