--- a/sample.html
+++ b/sample.html
@@ -19,17 +19,19 @@
     
 </head>
 
-<body>
+<body data-reference="page-loader">
     <div  data-replace="text">
         {{meta_login_desc}}
     </div>
 	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
-    <script src="js/init/login.js"></script>
+	<script src="js/initialize.js"></script>
+    <script src="js/init/sample.js"></script>
 	
 </body>
 </html>
