--- a/table-grid.html
+++ b/table-grid.html
@@ -51,7 +51,7 @@
 						<div class="app-specific clearfix">
 						<p>Application Specific Actions</p>
 							<div class="app-action-group ">
-								<a href="#"><i class="fa fa-print"></i></a>
+								<a href="#"  data-toggle="modal" data-target="#myModal"><i class="fa fa-print"></i></a>
 								<a href="#" class="active"><i class="fa fa-filter"></i></a>
 								<a href="#"><i class="fa fa-sort-amount-asc"></i></a>
 								<a href="#"><i class="fa fa-plus"></i></a>
@@ -60,7 +60,7 @@
 						</div>
 					</div>
 				</div>
-				<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+				
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                     <div class="grid-action-group">
-                        <a href="#"><i class="fa fa-print"></i></a>
+                        <a href="#"  data-toggle="modal" data-target="#myModal"><i class="fa fa-print"></i></a>
                         <a href="#"><i class="fa fa-filter"></i></a>
                         <a href="#"><i class="fa fa-sort-amount-asc"></i></a>
                         <a href="#"><i class="fa fa-plus"></i></a>
