Commit code for captcha/jquery.captcha.js

--- a/login.html
+++ b/login.html
@@ -21,12 +21,15 @@
 
 <body data-reference="page-loader">
     <div>
-		
+		<form id="frmLogin" name="login_form" method="post">
+			<input type="button" value="Submit">
+		</form>
     </div>
 	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
 	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
+	<script src="js/lib/captcha/jquery.captcha.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
