--- a/elements.html
+++ b/elements.html
@@ -15,11 +15,10 @@
 	<!-- Favicon icon -->
 	<link rel="icon" href="img/favicon.ico">
     
-	<title data-replace="text">{{site_login_title}}</title>
-    
+	<title data-replace="text">{{site_login_title}}</title>   
 </head>
 
-<body data-reference="page-loader">
+<body>
      <div class="padding-top"></div>
     <div class="container button-centre">
         <div class="col-md-12">
@@ -356,7 +355,7 @@
 				 width="64px" height="64px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
 			<g id="Shape_42_copy_6">
 				<g>
-					<polygon class="st3" points="1.1,5.9 24.3,29.1 24.3,60 39.7,52.3 39.7,29.1 62.9,5.9 "/>
+					<polygon class="st3" points="1.1,5.9 24.3,29.1 24.3,60 39.7,52.3 39.7,29.1 62.9,5.9 		"/>
 				</g>
 			</g>
 			</svg>
@@ -364,7 +363,7 @@
 		
 		<div class="padding-top"></div>
 		<div class="accordion col-md-9">
-			<section class="accordion-panel clearfix">
+			<section class="accordion-panel active clearfix">
 				<div class="accordion-header">
 					<h3>Accordion List</h3> 
 					<span><i></i></span>
@@ -378,7 +377,7 @@
 					</p>
 				</div>
 			</section>
-			<section class="accordion-panel clearfix">
+			<section class="accordion-panel accordion-close clearfix">
 				<div class="accordion-header">
 					<h3>Accordion List</h3> 
 					<span><i></i></span>
@@ -392,7 +391,7 @@
 					</p>
 				</div>
 			</section>
-			<section class="accordion-panel clearfix">
+			<section class="accordion-panel accordion-close clearfix">
 				<div class="accordion-header">
 					<h3>Accordion List</h3> 
 					<span><i></i></span>
@@ -407,18 +406,20 @@
 				</div>
 			</section>
 		</div>
+<div class="padding-top"></div>
+
+<p>Date: <input type="text" id="datepicker"></p>
 
 	</section>
 	</div>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
-	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
+	<!-- Custom JavaScript -->
+    <script src="js/functions.js"></script>
 	<!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-    <!-- Custom JavaScript -->
-    <script src="js/functions.js"></script>
-    <script src="js/initialize.js"></script>
+	<script src="js/lib/jQueryUI/jquery-ui.js"></script>
     <script src="js/init/elements.js"></script>
-	
+
 </body>
 </html>
