--- a/table-grid.html
+++ b/table-grid.html
@@ -85,7 +85,7 @@
             </div>
             <div class="panel-block-content no-padding">
                 <div class="app-action-form clearfix">
-                    <span class="heading ">Filter </span>
+                   <div class="field-name"> <span class="heading ">Filter </span></div>
                     <div class="col-md-3 col-sm-3 col-xs-3 no-padding">
 						<div class="dropdown-list ">
 							<div class="selected-listitem">Click Me</div>
