Commit changes as per SVG file

--- a/elements.html
+++ b/elements.html
@@ -62,7 +62,7 @@
             </div>
             <div class="padding-top"></div>
             <div class="col-md-4">
-                <button class="uie-primary-button margin-5 uie-button uie-icon-btn"> <span class="btn-icon"><img alt="Filter" src="img/icons/svg/filter.svg"></span>
+                <button class="uie-primary-button margin-5 uie-button uie-icon-btn"> <span class="btn-icon"><span class="svg" data-svg="svg-filter"></span></span>
 					<div class="btn-value">Filter </div>
 				</button>
             </div>
