--- a/elements.html
+++ b/elements.html
@@ -408,7 +408,7 @@
 		</div>
 <div class="padding-top"></div>
 
-<p>Date: <input type="text" id="datepicker"></p>
+<div class="datepicker-row"><label class="label-text">Date:</label> <input type="text" id="datepicker" class="text-input">  <span class="calendar-icon"></span> </div>
 
 	</section>
 	</div>
