dashboard frame and table grid

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -22,21 +22,55 @@
 <body  data-reference="page-loader">
     
 	<!-- Header -->
-	<header>header</header>
-	<div class="sidebar" id="wrap">Sidebar</div>
-	<div class="main">Body</div>
+	<header>
+		<section class="header-top">
+		<div class="block-container clearfix">
+		<div class="col-md-8 no-padding">
+                  <div class="header-left">
+                     <div class="header-date">Monday, 10 August 2015</div>
+                     <div class="header-time">10:33:34 AM</div>
+                  </div>
+               </div>
+		<div class="col-md-4">
+		<div class="header-right">
+		<div class="user-profile">
+		<span class="user-name">Hello Zodiac</span>
+		<div class="user-profile-menu">
+		<div class="dropdown-list">
+			<div class="selected-listitem"></div>
+			<ul>
+			<li rel="" value="">#4566871</li>
+			<li rel="" value=""> #4566871</li>
+			<li rel="" value="">#4566871</li>
+			<li rel="" value="">#4566871</li>
+			<li rel="" value=""> #4566871</li>
+			<li rel="" value="">#4566871</li>
+			</ul>
+		</div>
+		</div></div>
+		</div>
+		</div>
+		</div>
+		</section>
+	</header>
+	<div class="sidebar" id="wrap">
+		Sidebar
+	</div>
+	<div class="main">
+	Body
+	</div>
 	<!-- End Header -->
-	
 	<footer>
 			2015 Copyright &copy; DP World. All rights reserved.
-	</footer>
-
+		</footer>
+	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
 	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
     
 	<!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+	
 	
 	<!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
