--- a/elements.html
+++ b/elements.html
@@ -143,7 +143,7 @@
         <div class="padding-top"></div>
         <section class="ac_item">
 			<div class=" form-content col-md-12">
-				<form>
+				<!--<form>
 				<div class="col-md-6">
 					<div class="row">
 					<div class="form-row clearfix">
@@ -347,7 +347,7 @@
 						</div>
 						
 					</div>				
-				</form>
+				</form>-->
 			</div>
 	
 		<div class="svg">
@@ -413,13 +413,16 @@
 	</section>
 	</div>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
 	<!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="js/lib/jQueryUI/jquery-ui.js"></script>
 	
 	<!-- Custom JavaScript -->
+    <script src="js/lib/form/dform.js"></script>
     <script src="js/functions.js"></script>
+    <script src="js/initialize.js"></script>
     <script src="js/init/elements.js"></script>
 
 </body>
