Commit Dynamic Form Changes

--- a/elements.html
+++ b/elements.html
@@ -23,8 +23,7 @@
     <div class="container button-centre">
         <div class="col-md-12">
             <div class="col-md-4">
-                <button class="uie-btn uie-primary-small-button"><span>Normal</span>
-                </button>
+                <button class="uie-btn uie-primary-small-button" type="button">Normal</button>
             </div>
             <div class="col-md-4">
                 <button class="uie-btn uie-primary-disable"><span>Disable </span>
