working on header

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -34,20 +34,21 @@
 		<div class="col-md-4">
 		<div class="header-right">
 		<div class="user-profile">
-		<span class="user-name">Hello Zodiac</span>
+		<span class="user-name"></span>
 		<div class="user-profile-menu">
-		<div class="dropdown-list">
-			<div class="selected-listitem"></div>
-			<ul>
-			<li rel="" value="">#4566871</li>
-			<li rel="" value=""> #4566871</li>
-			<li rel="" value="">#4566871</li>
-			<li rel="" value="">#4566871</li>
-			<li rel="" value=""> #4566871</li>
-			<li rel="" value="">#4566871</li>
-			</ul>
-		</div>
+		
 		</div></div>
+		<div class="top-bar-menu" >
+                       <div class="user-profile">
+							<a href="#" class="user-profile-link">Hello Zodiac <span class="arrow"><i class="fa fa-caret-down"></i></span> </a>
+							<div style="display: none;" class="user-profile-menu">
+							 <ul>
+							<li><a href="login.html">Logout</a></li>
+							<li><a href="# ">Change Password</a></li>
+							 </ul>
+						   </div>
+                     </div>
+                     </div>
 		</div>
 		</div>
 		</div>
@@ -65,14 +66,16 @@
 		</footer>
 	
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+	<!-- Bootstrap Plugin Js -->
+	<script src="js/lib/bootstrap/bootstrap.min.js"></script>
+	
 	<script src="js/lib/blockUI/jquery.blockUI.js"></script>
 	<script src="js/lib/language/jquery.i18n.properties.js"></script>
-    
+		
 	<!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
 	
-	
-	<!-- Custom JavaScript -->
+    <!-- Custom JavaScript -->
     <script src="js/functions.js"></script>
 	<script src="js/initialize.js"></script>
     <script src="js/init/table-grid.js"></script>
