elements-new.html

--- a/elements-new.html
+++ b/elements-new.html
@@ -382,6 +382,24 @@
 				
             </div>
 		</div>
+		
+		<div class="col-md-12 panel">
+			<h2 class="panel-title">Date and Time Piker</h2>
+			<p></br></p>
+			<div class="datepicker-row col-md-4">
+            <label class="label">Date:</label>
+            <input type="text" id="datepicker" class="text-box"></input>
+        </div>
+
+        <div id="datetimepicker3" class="input-append col-md-4">
+            <label class="label">Time:</label>
+            <input data-format="hh:mm:ss" type="text" class="text-box add-on" data-date-icon="icon-calendar"></input>
+            <span class="add-on">
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+      </i>
+    </span>
+        </div>
+		</div>
 	</section>
 	</div>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
