Commit Plugin and css code

--- a/form-element.html
+++ b/form-element.html
@@ -11,6 +11,17 @@
       <meta name="title" content="{{meta_login_title}}" data-replace="meta">
       <!-- Favicon icon -->
       <link rel="icon" href="img/favicon.ico">
+	  
+	  <!-- CSS Files -->
+	  <link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css">
+	  <link rel="stylesheet" href="css/lib/font/font-awesome.min.css">
+	  <link rel="stylesheet" href="css/style.css">
+	  <link rel="stylesheet" href="css/reset.css">
+	  <link rel="stylesheet" href="css/responsive.css">
+	  <link rel="stylesheet" href="css/lib/scrollbar/jquery.mCustomScrollbar.css">
+	  <link rel="stylesheet" href="css/lib/jquery-ui/jquery-ui.css">
+	  <link rel="stylesheet" href="assets/blue/style.css">
+	  
       <title data-replace="text">{{site_login_title}}</title>
    </head>
    <body>
@@ -34,6 +45,7 @@
       <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/lib/jQueryUI/jquery-ui.js"></script>
       <!-- Custom JavaScript -->
+	  <script src="js/general.js"></script>
       <script src="js/lib/form/dform.js"></script>
       <script src="js/functions.js"></script>
       <script src="js/initialize.js"></script>
