--- a/table-grid.html
+++ b/table-grid.html
@@ -20,7 +20,7 @@
 </head>
 
 <body data-reference="page-loader">
-	<aside>
+	<section>
          <div class="container">
         <!-- Panel Block-->
         <div class="panel-block">
@@ -271,7 +271,7 @@
                                     </span>
                                 </th>
 								<th class="more-field-show">
-								<span >+</span>
+								<a href="#"><span >+</span></a>
 								</th>
                                 <th>
                                     <span>Cal </span>
@@ -329,7 +329,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td class="disable">LOLO</td>
                                 <td>0000</td>
@@ -360,7 +360,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td class="disable">LOLO</td>
                                 <td>0000</td>
@@ -391,7 +391,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td class="disable">LOLO</td>
                                 <td>0000</td>
@@ -422,7 +422,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td class="disable">LOLO</td>
                                 <td>0000</td>
@@ -454,7 +454,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td class="disable">LOLO</td>
                                 <td>0000</td>
@@ -485,7 +485,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -516,7 +516,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -547,7 +547,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -578,7 +578,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -609,7 +609,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -640,7 +640,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -671,7 +671,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -702,7 +702,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -733,7 +733,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
                                 <td>000</td>
                                 <td>LOLO</td>
                                 <td>0000</td>
@@ -764,7 +764,7 @@
                                         <label class="css-label" for="checkbox2"></label>
                                     </div>
                                 </td>
-								<td class="more-field-show"><span >+</span></td>
+								<td class="more-field-show"><a href="#"><span >+</span></a></td>
 								
 								</td>
 								
@@ -842,7 +842,7 @@
         </div>
         <!--End Panel-->
     </div>
-	</aside>
+	</section>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
 	<!-- Bootstrap Plugin Js -->
 	<script src="js/lib/bootstrap/bootstrap.min.js"></script>
