checkbox image changes

--- a/table-grid.html
+++ b/table-grid.html
@@ -271,7 +271,7 @@
                                     </span>
                                 </th>
 								<th class="more-field-show">
-								<a href="#"><span >+</span></a>
+								<span >+</span>
 								</th>
                                 <th>
                                     <span>Cal </span>
