--- a/elements-new.html
+++ b/elements-new.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="css/responsive.css">
 	<link rel="stylesheet" href="css/lib/scrollbar/jquery.mCustomScrollbar.css">
 	<link rel="stylesheet" href="css/lib/jquery-ui/jquery-ui.css">
-	<link rel="stylesheet" href="css/assets/blue/style.css">
+	<link rel="stylesheet" href="assets/blue/style.css">
 </head>
 
 <body>
