--- a/form-element.html
+++ b/form-element.html
@@ -12,7 +12,18 @@
       <!-- Favicon icon -->
       <link rel="icon" href="img/favicon.ico">
       <title data-replace="text">{{site_login_title}}</title>
-   </head>
+		
+	  <!-- CSS fiels -->
+	 <link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css">
+	 <link rel="stylesheet" href="css/lib/font/font-awesome.min.css">
+	 <link rel="stylesheet" href="css/style.css">
+	 <link rel="stylesheet" href="css/reset.css">
+	 <link rel="stylesheet" href="css/responsive.css">
+	 <link rel="stylesheet" href="css/lib/scrollbar/jquery.mCustomScrollbar.css">
+	 <link rel="stylesheet" href="css/lib/jquery-ui/jquery-ui.css">
+	 <link rel="stylesheet" href="assets/blue/style.css">
+		
+	</head>
    <body>
       <div class="container button-centre">
 		<div class="col-md-12">
@@ -23,7 +34,7 @@
 		<div class="padding-top"></div>
         <section class="ac_item">
             <div class="form-content col-md-12">
-               
+                <h2 class="panel-title"></h2>
             </div>
         </section>
       </div>
@@ -34,6 +45,7 @@
       <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/lib/jQueryUI/jquery-ui.js"></script>
       <!-- Custom JavaScript -->
+	  <script src="js/general.js"></script>
       <script src="js/lib/form/dform.js"></script>
       <script src="js/functions.js"></script>
       <script src="js/initialize.js"></script>
